--- a/retratos/index.html
+++ b/retratos/index.html
@@ -1,13 +1,11 @@
-
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-	<title>Fotografia</title>
+	<title>Retratos</title>
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="../css/estilos.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-
 </head>
 <body>
 	<div class="container">
@@ -16,28 +14,33 @@
 				<h1>Comenzando con la fotografía</h1>
 			</div>
 			<div class="menu">
-				<a href="index.html">Inicio</a> |
-				<a href="paisajes/index.html">Paisajes</a> |	
-				<a href="retratos/index.html">Retratos</a>
+				<a href="../index.html">Inicio</a> |
+				<a href="../paisajes/index.html">Paisajes</a> |	
+				<a href="index.html">Retratos</a>
 			</div>
 		</header>
-
-		<div class="container1" role="main">
-			<div class="c2">
-				<img src="imagenes/puerto_varas.jpg" alt="Inicio">
-			</div>
-		</div>
-
 		<div class="container2" role="main">
-			<div class="c3">
-				<a href="#"><img src="imagenes/parinacota.jpg" alt="Paisajes"><p>Paisajes</p></a>
+			<div class="p1">
+				<img src="../imagenes/retrato.jpg" alt="Inicio">
 			</div>
-
-			<div class="c4">
-				<a href="#2"><img src="imagenes/centro.jpg" alt="Retratos"><p>Retratos</p></a>
+			<div class="p2">
+				<img src="../imagenes/retrato.jpg" alt="Inicio">
+			</div>
+			<div class="p3">
+				<img src="../imagenes/retrato.jpg" alt="Inicio">
 			</div>
 		</div>
-
+		<div class="container2" role="main">
+			<div class="p4">
+				<img src="../imagenes/retrato.jpg" alt="Inicio">
+			</div>
+			<div class="p5">
+				<img src="../imagenes/retrato.jpg" alt="Inicio">
+			</div>
+			<div class="p6">
+				<img src="../imagenes/retrato.jpg" alt="Inicio">
+			</div>
+		</div>
 		<div class="container3" role="main">
 			<div class="c5">
 				<h2>Contacto</h2>
@@ -54,9 +57,9 @@
 			<div class="c7">
 				<h2>Redes Sociales</h2>
 				<p>Comparte en nuestra redes</p>
-				<img src="imagenes/RS/facebook.jpg"> Facebook <br>
-				<img src="imagenes/RS/instagram.jpg"> Imstagram <br>
-				<img src="imagenes/RS/twitter.jpg"> Twitter
+				<img src="../imagenes/RS/facebook.jpg"> Facebook <br>
+				<img src="../imagenes/RS/instagram.jpg"> Imstagram <br>
+				<img src="../imagenes/RS/twitter.jpg"> Twitter
 			</div>
 
 			<div class="c8">
